[cube] animated button presses and prettier panels

--- a/cube/index.html
+++ b/cube/index.html
@@ -10,9 +10,9 @@
     <section id="container">
       <section id="context"></section>
     </section>
-    <section id="debug"></section>
-    <section id="health">❤️❤️❤️🖤</section>
-    <section id="stamina">💛💛🖤</section>
+    <section id="debug" class="panel"></section>
+    <section id="health" class="panel">❤️❤️❤️🖤</section>
+    <section id="stamina" class="panel">💛💛🖤</section>
     <script type="module" src="./index.js"></script>
   </body>
 </html>
