--- a/tarot/index.html
+++ b/tarot/index.html
@@ -4,6 +4,7 @@
   <link rel="stylesheet" href="index.css">
   <script type="module">
 
+  /*
   import {
     smithDeck,
     buildCards,
@@ -13,10 +14,25 @@
   window.addEventListener('DOMContentLoaded', () => {
     new Controller(document.body, smithDeck);
   });
+  */
+
+  import {main} from './repldemo.js';
+  main(document.body);
 
   </script>
 </head><body>
 
+  <!--
+  <div class="card-mat">
+    <div class="card-place"></div>
+    <div class="card-place"></div>
+    <div class="card-place"></div>
+  </div>
+
+  <div class="card-deck card-place"></div>
+
+  <div class="card-hand card-place"></div>
+  -->
 
 </body></html>
 <!--
