[jspit] publish the rough boopworld demo

--- a/jspit/index.html
+++ b/jspit/index.html
@@ -51,6 +51,11 @@
             <dt><a href="bsp.html">BSP Procgen</a></dt><dd>
               Binary Space Partition driven level generation.</dd>
 
+            <dt><a href="boops/index.html">Boopworld</a></dt><dd>
+              A rough experiment towards thunk-ing minds, living in a spartan
+              ocap-hardened world with an underlying component-entity system.
+            </dd>
+
           </dl>
         </section>
 
