[boopworld/demo] add details w/ control legend

--- a/boopworld/demo/index.html
+++ b/boopworld/demo/index.html
@@ -28,6 +28,19 @@
         </p>
       </details>
 
+      <details><summary>Controls</summary><dl>
+        <dt><tt>W</tt>, <tt>w</tt>, <tt>&lt;ArrowUp&gt;</tt></dt>
+          <dd>Move Up</dd>
+        <dt><tt>A</tt>, <tt>a</tt>, <tt>&lt;ArrowLeft&gt;</tt></dt>
+          <dd>Move Left</dd>
+        <dt><tt>S</tt>, <tt>s</tt>, <tt>&lt;ArrowDown&gt;</tt></dt>
+          <dd>Move Down</dd>
+        <dt><tt>D</tt>, <tt>d</tt>, <tt>&lt;ArrowRight&gt;</tt></dt>
+          <dd>Move Right</dd>
+        <dt><tt>.</tt></dt>
+          <dd>Stay</dd>
+      </dl></details>
+
       <details><summary>The road so far:</summary>
         <ul>
 
