--- a/cube/index.html
+++ b/cube/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=0.5" />
+    <meta
+      name="viewport"
+      content="width=device-width, height=device-height, initial-scale=0.5, maximum-scale=1.0, user-scalable=0"
+    />
     <link rel="stylesheet" type="text/css" href="index.css" />
     <title>Cube</title>
   </head>
