--- a/cube/gldemo.html
+++ b/cube/gldemo.html
@@ -14,14 +14,29 @@
 
     <div
       title="Key[C] Whether to draw using a derived 'curved tile' layer whose cells are computed at the 4-corners of the base land-vs-water layer">
-      <input type="checkbox" id="show_curves" />
+      <input id="show_curves" type="checkbox" />
       <label for="show_curves">Use Curved Tiles</label>
     </div>
 
     <div
       title="Key[X] Whether tile curves should extend past edge of world, or clip as if surrounded by land on all sides">
-      <input type="checkbox" id="extend_curves" />
+      <input id="extend_curves" type="checkbox" />
       <label for="extend_curves">Extend Tile Curves</label>
+    </div>
+
+    <div title="Key[- +] Size of each world tile in pixels">
+      <label for="cell_size">Cell Size</label>
+      <input id="cell_size" value="100" type="number" min="2" max="256" step="2" />
+    </div>
+
+    <div title="Key[A D] World width in cells">
+      <label for="world_width">World Width</label>
+      <input id="world_width" value="8" type="number" min="1" max="2048" step="1" />
+    </div>
+
+    <div title="Key[W S] World height in cells">
+      <label for="world_height">World Height</label>
+      <input id="world_height" value="8" type="number" min="1" max="2048" step="1" />
     </div>
 
   </div>
@@ -42,6 +57,19 @@
     const $extendCurves = document.querySelector('#extend_curves');
     if (!$extendCurves) throw new Error('unable to find #extend_curves');
 
+    const $cellSize = document.querySelector('#cell_size');
+    if (!$cellSize) throw new Error('unable to find #cell_size');
+
+    const $worldWidth = document.querySelector('#world_width');
+    if (!$worldWidth) throw new Error('unable to find #world_width');
+
+    const $worldHeight = document.querySelector('#world_height');
+    if (!$worldHeight) throw new Error('unable to find #world_height');
+
+    let stop = () => { }
+
+    $cellSize.addEventListener('change', () => {stop()});
+
     window.addEventListener('keypress', e => {
       switch (e.key) {
 
@@ -55,22 +83,80 @@
           $extendCurves.checked = !$extendCurves.checked;
           break;
 
+        case '.':
+          stop();
+          break;
+
+        case '+':
+          $cellSize.stepUp();
+          stop();
+          break;
+
+        case '-':
+          $cellSize.stepDown();
+          stop();
+          break;
+
+        case 'a':
+        case 'A':
+          $worldWidth.stepDown();
+          stop();
+          break;
+
+        case 'd':
+        case 'D':
+          $worldWidth.stepUp();
+          stop();
+          break;
+
+        case 's':
+        case 'S':
+          $worldHeight.stepDown();
+          stop();
+          break;
+
+        case 'w':
+        case 'W':
+          $worldHeight.stepUp();
+          stop();
+          break;
+
       }
     });
 
-    await demo({
-      $world,
-      cellSize: 100,
-      tileSize: 256,
+    for (
+      let count = 0, backoff = 0, now = Date.now(), then = now; ;
+      then = now,
+      backoff = Math.min(200, Math.pow(1.5, ++count))
+    ) {
+      let running = true;
+      stop = () => {running = false};
 
-      worldWidth: 8,
-      worldHeight: 8,
+      const since = now - then;
+      const wait = backoff - since;
+      if (wait > 0) {
+        await new Promise(resolve => setTimeout(resolve, wait));
+        console.log('wait', wait);
+      } else {
+        count = 0;
+      }
+      if (!running) continue;
 
-      showCurvyTiles: () => $showCurves.checked,
-      clipCurvyTiles: () => !$extendCurves.checked,
+      await demo({
+        $world,
+        cellSize: $cellSize.valueAsNumber,
+        tileSize: 256,
 
-    });
-    throw new Error('unexpected demo loop exit');
+        worldWidth: $worldWidth.valueAsNumber,
+        worldHeight: $worldHeight.valueAsNumber,
+
+        shouldRun() {return running},
+        showCurvyTiles() {return $showCurves.checked},
+        clipCurvyTiles() {return !$extendCurves.checked},
+
+      });
+    }
+
   </script>
 </body>
 
